# brand-perception-ai

./: .gitignore  README.md  docker-compose.yml  package.json
backend/: .env.example  pyproject.toml
backend/app/: main.py  middleware.py  tasks.py  worker.py
backend/app/core/: auth.py  config.py  database.py  encryption.py  enums.py  logging.py  progress.py  utils.py
backend/app/models/: report.py  schedule.py  user.py
backend/app/routes/: auth.py  reports.py  schedules.py  usage.py
backend/app/services/: analysis.py  providers.py  rate_limiter.py  report_service.py
backend/tests/: conftest.py  test_analysis 2.py  test_analysis.py  test_auth.py  test_reports.py  test_schedules.py  test_streaming.py  test_tasks.py  test_usage.py  test_validation.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: api-key-dialog.tsx  logo.tsx  new-analysis-dialog.tsx  theme-toggle.tsx
frontend/src/components/analysis/: analysis-form.tsx  analysis-progress.tsx
frontend/src/components/dashboard/: reports-table.tsx  schedules-section.tsx  sentiment-badge.tsx  stats-cards.tsx
frontend/src/components/layout/: app-layout.tsx  auth-layout.tsx  sidebar.tsx
frontend/src/components/report/: competitor-chart.tsx  model-comparison.tsx  sentiment-gauge.tsx  trend-chart.tsx
frontend/src/components/reports/: report-card.tsx  (+1 more)
frontend/src/lib/: api.ts
frontend/src/pages/: dashboard.tsx  login.tsx  new-analysis.tsx  report.tsx  reports-list.tsx  settings.tsx  signup.tsx
frontend/src/types/: index.ts
(+6 files in other folders)
